--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Jinja2==2.11.2
 MarkupSafe==1.1.1
 passlib==1.7.2
 Pillow==7.2.0
+python-dotenv==0.14.0
 SQLAlchemy==1.3.19
 Werkzeug==1.0.1
 WTForms==2.3.3
