--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+blinker==1.4
 click==7.1.2
 dnspython==2.0.0
 email-validator==1.1.1
 Flask==1.1.2
 Flask-Login==0.5.0
+Flask-Mail==0.9.1
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
 idna==2.10
